# MiniCarSteer

./: .dockerignore  .gitignore  .gitlab-ci.yml  CMakeLists.txt  Dockerfile  LICENSE  PrimeChecker.cpp  PrimeChecker.hpp  README.md  TestPrimeChecker.cpp  code-of-conduct.md  helloworld.cpp
.gitlab/issue_templates/: issue_template.md
.gitlab/merge_request_templates/: merge_template.md
